data/derived/fa15/progs/unify/prog3273.ml.out
Characters 67-71:
  |VarX -> Printf.printf "%s" VarX;;
                              ^^^^
Error: This expression has type expr but an expression was expected of type
         string
